# ml-lib

./: .gitignore  CMakeLists.txt  README.md  activation.cpp  activation.hpp  main.cpp  main.py  main_pybind.cpp  matrix.cpp  matrix.hpp  ml_lib.cpp  network.cpp  network.hpp  network_connection.cpp  network_connection.hpp  network_layer.cpp  old_tensor.cpp  old_vector.cpp  read_file.cpp  read_file.hpp
src/: matrix.hpp  network.cpp  network.hpp  network_connection.cpp  network_connection.hpp  network_layer.hpp  read_file.hpp
